--- a/my-solutions.css
+++ b/my-solutions.css
@@ -1,3 +1,5 @@
+/* ex-1 */
+
 .ex-1-square {
     transition: background-color 2s;
 }
@@ -5,6 +7,8 @@
 .ex-1-square:hover {
     background-color: red;
 }
+
+/* ex-2 */
 
 .ex-2-square {
     transition: width 2s;
@@ -14,6 +18,8 @@
     width: 100%;
 }
 
+/* ex-3 */
+
 .ex-3-square {
     transition: border-radius 2s;
 }
@@ -22,6 +28,8 @@
     border-radius: 50%;
 }
 
+/* ex-4 */
+
 .ex-4-square {
     transition: opacity 2s;
 }
@@ -29,6 +37,8 @@
 .ex-4-square:hover {
     opacity: 0;
 }
+
+/* ex-5 */
 
 .ex-5-square {
     transition: padding 5s, width 1s, height 1s;
@@ -43,6 +53,8 @@
     padding: 100px;
 }
 
+/* ex-6 */
+
 .ex-6-img {
     transition: filter 2s;
 }
@@ -50,6 +62,8 @@
 .ex-6-img:hover {
     filter: grayscale(100%);
 }
+
+/* ex-7 */
 
 .ex-7-img:hover {
     animation: aereo 10s;
@@ -61,6 +75,17 @@
     60% {filter: sepia(100%);}
     100% {filter: none;}
 }
+
+/* OPPURE
+
+.ex-7-img {
+    transition: 2s;
+}
+.ex-7-img:hover {
+    filter: grayscale(50%) sepia(50%);
+} */
+
+/* ex-8 */
 
 .ex-8-img {
     transition: border-radius 10s;
@@ -77,6 +102,18 @@
     60% {filter: sepia(100%);}
     100% {filter: none;}
 }
+
+/* OPPURE
+
+.ex-8-img {
+    transition: 10s;
+}
+.ex-8-img:hover {
+    filter: grayscale(50%) sepia(50%);
+    border-radius: 25%;
+} */
+
+/* ex-9 */
 
 .ex-9-img {
     transition: border-radius 10s, width 10s;
@@ -95,6 +132,18 @@
     100% {filter: none;}
 }
 
+/* OPPURE
+
+.ex-9-img {
+    transition: 10s;
+}
+.ex-9-img:hover {
+    filter: grayscale(50%) sepia(50%);
+    border-radius: 25px;
+} */
+
+/* ex-10 */
+
 .ex-10-icon {
     animation: rotella 3s infinite;
 }
@@ -103,6 +152,8 @@
     0% {transform: rotate(1turn);}
     
 }
+
+/* ex-11 */
 
 .ex-11-icon {
     animation: rotella-2 10s infinite;
@@ -114,11 +165,80 @@
     100% {transform: rotate(0deg;)}   
 }
 
+/* ex-12 */
+
 .ex-12-top-white {
-    animation: top-button infinite 2s linear;
+    animation: top-button 2s linear infinite;
 }
 
 .ex-12-bottom-white {
-    animation: bottom-button infinite 2s linear;
+    animation: bottom-button 2s linear infinite;
 }
 
+@keyframes top-button {
+    0% {left: 0%;}
+    50% {left: 65%;}
+    100% {left: 0%;}
+}
+
+@keyframes bottom-button {
+    0% {right: 0px;}
+    50% {right: 65%;}
+    100% {right: 0px;}
+}
+
+/* ex-13 */
+
+.ex-13-top-white {
+    animation: top-button-13 2s  infinite;
+}
+
+.ex-13-bottom-white {
+    animation: bottom-button-13 2s  infinite;
+}
+
+@keyframes top-button-13 {
+    0% {
+        left: 0%;
+        top: -15px;
+    }
+    25% {
+        left: 80%;
+        top: -15px;
+    }
+    50% {
+        top: 80%;
+        left: 80%;
+    }
+    75% {
+        left: -15px;
+        top: 80%;
+    }
+    100% {
+        left: 0%;
+        top: -15px;
+    }
+}
+
+@keyframes bottom-button-13 {
+    0% {
+        right: 0%;
+        bottom: -15px;
+    }
+    25% {
+        right: 80%;
+        bottom: -15px;
+    }
+    50% {
+        bottom: 80%;
+        right: 80%;
+    }
+    75% {
+        right: -15px;
+        bottom: 80%;
+    }
+    100% {
+        right: 0%;
+        bottom: -15px;
+    }
+}
