--- a/my-solutions.css
+++ b/my-solutions.css
@@ -116,11 +116,11 @@
 /* ex-9 */
 
 .ex-9-img {
-    transition: border-radius 10s, width 10s;
+    transition: border-radius 10s, scale 10s;
 }
 
 .ex-9-img:hover {
-    width: 50%;
+    scale: 1.25;
     animation: aereo 10s;
     border-radius: 25%;
 }
@@ -144,7 +144,7 @@
 
 /* ex-10 */
 
-.ex-10-icon {
+.ex-10-icon:hover {
     animation: rotella 3s infinite;
 }
 
@@ -155,7 +155,7 @@
 
 /* ex-11 */
 
-.ex-11-icon {
+.ex-11-icon:hover {
     animation: rotella-2 10s infinite;
 }
 
@@ -167,11 +167,11 @@
 
 /* ex-12 */
 
-.ex-12-top-white {
+.ex-12-button:hover .ex-12-top-white {
     animation: top-button 2s linear infinite;
 }
 
-.ex-12-bottom-white {
+.ex-12-button:hover .ex-12-bottom-white {
     animation: bottom-button 2s linear infinite;
 }
 
@@ -189,11 +189,11 @@
 
 /* ex-13 */
 
-.ex-13-top-white {
+.ex-13-button:hover .ex-13-top-white {
     animation: top-button-13 2s  infinite;
 }
 
-.ex-13-bottom-white {
+.ex-13-button:hover .ex-13-bottom-white {
     animation: bottom-button-13 2s  infinite;
 }
 
@@ -215,7 +215,7 @@
         top: 80%;
     }
     100% {
-        left: 0%;
+        left: -15px;
         top: -15px;
     }
 }
